[gd_scene load_steps=4 format=3 uid="uid://cyjf1ffgct46w"]

[ext_resource type="Script" path="res://Data/BonusDescriptionScript.gd" id="1_perrs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_43g3n"]
bg_color = Color(0.14902, 0.258824, 0.32549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_87eql"]
bg_color = Color(0.164706, 0.180392, 0.215686, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8

[node name="BonusDescription" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_perrs")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.5
offset_top = -224.0
offset_right = 193.5
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_43g3n")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_87eql")

[node name="TitleLbl" type="Label" parent="PanelContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Название"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="DescriptionLbl" type="RichTextLabel" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Описание

"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="AcceptButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 8
text = "Продолжить"

[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer2/AcceptButton" to="." method="_on_accept_button_pressed"]
